--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-native-device-info": "^10.8.0",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.12.0",
-    "react-native-reanimated": "^3.4.0",
+    "react-native-reanimated": "2.9.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
     "react-native-vector-icons": "^10.0.0",
