--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
+    "axios-curlirize": "^2.0.0",
     "husky": "^8.0.3",
     "i18n-js": "^4.3.0",
     "react": "18.1.0",
@@ -31,6 +32,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-version-info": "^1.1.1",
+    "react-navigation": "^4.4.4",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3"
