--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-navigation": "^4.4.4",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "rn-range-slider": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
